fix horizontal scroliing on mobile

--- a/src/Play/index.css
+++ b/src/Play/index.css
@@ -9,10 +9,7 @@
   width: fit-content;
   padding-bottom: 3rem;
   margin: 0 auto;
-}
-
-.player-radio__image {
-  margin: 0 3rem 1rem 0;
+  max-width: 300px;
 }
 
 .player-radio__info {
@@ -50,10 +47,12 @@
 }
 
 .player-audio__station-img {
-  background-image: url(../assets/radio.jpg);
+  background-image: url(/static/media/radio.3d128786.jpg);
   object-fit: cover;
-  width: 300px;
-  height: 300px;
+  width: 200px;
+  height: 200px;
+  margin: 2rem auto;
+  display: block;
 }
 
 .player-audio__custom-container {
@@ -76,8 +75,13 @@
   }
   .player-radio__image {
     align-self: center;
+    margin-right: 2rem;
   }
   .player-radio__info {
     font-size: 1.25rem;
+  }
+
+  .player-audio__station-img {
+    margin: 0 auto;
   }
 }
